@@ -1,6 +1,15 @@
 package life.genny.qwandaq.utils;
 
-import java.util.*;
+import static life.genny.qwandaq.attribute.Attribute.PRI_CODE;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -25,8 +34,10 @@ import life.genny.qwandaq.attribute.Attribute;
 import life.genny.qwandaq.attribute.EntityAttribute;
 import life.genny.qwandaq.constants.Prefix;
 import life.genny.qwandaq.datatype.DataType;
+import life.genny.qwandaq.datatype.capability.core.CapabilitySet;
 import life.genny.qwandaq.datatype.capability.requirement.ReqConfig;
 import life.genny.qwandaq.entity.BaseEntity;
+import life.genny.qwandaq.entity.Definition;
 import life.genny.qwandaq.entity.search.SearchEntity;
 import life.genny.qwandaq.entity.search.trait.Filter;
 import life.genny.qwandaq.entity.search.trait.Operator;
@@ -101,7 +112,7 @@ public class QwandaUtils {
 
 		String key = String.format(QwandaUtils.ASK_CACHE_KEY_FORMAT, processData.getProcessId());
 		CacheUtils.putObject(userToken.getProductCode(), key, asks.toArray());
-		log.info("Asks cached for " + processData.getProcessId());
+		log.trace("Asks cached for " + processData.getProcessId());
 	}
 
 	/**
@@ -164,6 +175,7 @@ public class QwandaUtils {
 		Attribute attribute = CacheUtils.getObject(productCode, attributeCode, Attribute.class);
 
 		if (attribute == null) {
+			// TODO: We may need to make a cached everything check here to avoid recaching everything in the event we go looking for a dud attribute code
 			log.error("Could not find attribute " + attributeCode + " in cache: " + productCode);
 			loadAllAttributesIntoCache(productCode);
 		}
@@ -252,12 +264,18 @@ public class QwandaUtils {
 		}
 	}
 
+	/**
+	 * Create a button event.
+	 *
+	 * @param code
+	 * @param name
+	 * @return
+	 */
 	public Attribute createButtonEvent(String code, final String name) {
-		if (!code.startsWith(Prefix.EVT)) {
+		if (!code.startsWith(Prefix.EVT))
 			code = Prefix.EVT.concat(code);
-		}
 		code = code.toUpperCase();
-		DataType DTT_EVENT = getAttribute(userToken.getProductCode(), "EVT_SUBMIT").getDataType();
+		DataType DTT_EVENT = getAttribute(userToken.getProductCode(), Attribute.EVT_SUBMIT).getDataType();
 		return new Attribute(code, name.concat(" Event"), DTT_EVENT);
 	}
 
@@ -271,8 +289,7 @@ public class QwandaUtils {
 	 * @param target The target entity
 	 * @return The generated Ask
 	 */
-	public Ask generateAskFromQuestion(final Question question, final BaseEntity source, final BaseEntity target,
-			ReqConfig requirementsConfig) {
+	public Ask generateAskFromQuestion(final Question question, final BaseEntity source, final CapabilitySet target, ReqConfig requirementsConfig) {
 		if (question == null)
 			throw new NullParameterException("question");
 		if (source == null)
@@ -282,29 +299,25 @@ public class QwandaUtils {
 
 		String productCode = userToken.getProductCode();
 		// init new parent ask
-		Ask ask = new Ask(question, source.getCode(), target.getCode());
+		Ask ask = new Ask(question, source.getCode(), target.getEntityCode());
 		ask.setRealm(productCode);
 
-		Attribute attribute = question.getAttribute();
-		if ("QUE_BASEENTITY_GRP".equals(question.getCode())) {
-			return generateAskGroupUsingBaseEntity(target);
-		}
+		if (Question.QUE_BASEENTITY_GRP.equals(question.getCode()))
+			return generateAskGroupUsingBaseEntity(target.getEntity());
 
 		// override with Attribute icon if question icon is null
+		Attribute attribute = question.getAttribute();
 		if (attribute != null && attribute.getIcon() != null) {
-			if (question.getIcon() == null) {
+			if (question.getIcon() == null)
 				question.setIcon(attribute.getIcon());
-			}
 		}
 
 		// check if it is a question group
 		if (question.getAttributeCode().startsWith(Attribute.QQQ_QUESTION_GROUP)) {
 
-			log.info("[*] Parent Question: " + question.getCode());
-
+			log.debug("[*] Building Question Group: " + question.getCode());
 			// groups always readonly
 			ask.setReadonly(true);
-
 			// fetch questionQuestions from the DB
 			List<QuestionQuestion> questionQuestions = databaseUtils.findQuestionQuestionsBySourceCode(productCode,
 					question.getCode());
@@ -312,19 +325,15 @@ public class QwandaUtils {
 			// recursively operate on child questions
 			for (QuestionQuestion questionQuestion : questionQuestions) {
 
-				log.info("   [-] Found Child Question in database:  " + questionQuestion.getSourceCode() + ":"
+				log.debug("   [-] Found Child Question:  " + questionQuestion.getSourceCode() + ":"
 						+ questionQuestion.getTargetCode());
-				if (requirementsConfig != null) {
-					if (!questionQuestion.requirementsMet(requirementsConfig)) { // For now all caps are needed. I'll
-																					// make this more comprehensive
-																					// later
-						continue;
-					}
+				if(!questionQuestion.requirementsMet(target, requirementsConfig)) { // For now all caps are needed. I'll make this more comprehensive later
+					continue;
 				}
-				Ask child = generateAskFromQuestionCode(questionQuestion.getTargetCode(), source, target);
+				Ask child = generateAskFromQuestionCode(questionQuestion.getTargetCode(), source, target.getEntity());
 
 				// Do not include PRI_SUBMIT
-				if ("PRI_SUBMIT".equals(child.getQuestion().getAttribute().getCode())) {
+				if (Attribute.PRI_SUBMIT.equals(child.getQuestion().getAttribute().getCode())) {
 					continue;
 				}
 
@@ -339,7 +348,6 @@ public class QwandaUtils {
 				if (questionQuestion.getIcon() != null) {
 					child.getQuestion().setIcon(questionQuestion.getIcon());
 				}
-				log.info("Adding: " + child.getQuestionCode());
 				ask.add(child);
 			}
 		} else {
@@ -349,8 +357,12 @@ public class QwandaUtils {
 		return ask;
 	}
 
-	public Ask generateAskFromQuestion(final Question question, final BaseEntity source, final BaseEntity target) {
+	public Ask generateAskFromQuestion(final Question question, final BaseEntity source, final CapabilitySet target) {
 		return generateAskFromQuestion(question, source, target, null);
+	}
+
+	public Ask generateAskFromQuestionCode(final String code, final BaseEntity source, final CapabilitySet target) {
+		return generateAskFromQuestionCode(code, source, target, new ReqConfig());
 	}
 
 	/**
@@ -363,17 +375,14 @@ public class QwandaUtils {
 	 * @param target The target entity
 	 * @return The generated Ask
 	 */
-	public Ask generateAskFromQuestionCode(final String code, final BaseEntity source, final BaseEntity target,
-			ReqConfig requirementsConfig) {
-
+	public Ask generateAskFromQuestionCode(final String code, final BaseEntity source, final CapabilitySet target, ReqConfig requirementsConfig) {
 		if (code == null)
 			throw new NullParameterException("code");
-		// don't need to check source, target since they are checked in
-		// generateAskFromQuestion
+		// don't need to check source, target since they are checked in generateAskFromQuestion
 
 		// if the code is QUE_BASEENTITY_GRP then display all the attributes
-		if ("QUE_BASEENTITY_GRP".equals(code)) {
-			return generateAskGroupUsingBaseEntity(target);
+		if (Question.QUE_BASEENTITY_GRP.equals(code)) {
+			return generateAskGroupUsingBaseEntity(target.getEntity());
 		}
 
 		String productCode = userToken.getProductCode();
@@ -391,7 +400,7 @@ public class QwandaUtils {
 	}
 
 	public Ask generateAskFromQuestionCode(final String code, final BaseEntity source, final BaseEntity target) {
-		return generateAskFromQuestionCode(code, source, target, null);
+		return generateAskFromQuestionCode(code, source, new CapabilitySet(target), null);
 	}
 
 	/**
@@ -412,40 +421,25 @@ public class QwandaUtils {
 	}
 
 	/**
-	 * Get all attribute codes active within an ask using recursion.
+	 * Perform basic code checks on attribute code.
 	 *
-	 * @param codes The set of codes to add to
-	 * @param ask   The ask to traverse
-	 * @return The udpated set of codes
+	 * @param code An attribute code
+	 * @return boolean
 	 */
-	public Set<String> recursivelyGetAttributeCodes(Set<String> codes, Ask ask) {
+	public static boolean attributeCodeMeetsBasicRequirements(String code) {
 
-		String code = ask.getQuestion().getAttribute().getCode();
+		if (!Arrays.asList(ACCEPTED_PREFIXES).contains(code.substring(0, 4)))
+			return false;
+		else if (Arrays.asList(EXCLUDED_ATTRIBUTES).contains(code))
+			return false;
 
-		// grab attribute code of current ask if conditions met
-		if (!Arrays.asList(ACCEPTED_PREFIXES).contains(code.substring(0, 4))) {
-			log.debugf("Prefix %s not in accepted list", code.substring(0, 4));
-		} else if (Arrays.asList(EXCLUDED_ATTRIBUTES).contains(code)) {
-			log.debugf("Attribute %s in exclude list", code);
-		} else if (ask.getReadonly()) {
-			log.debugf("Ask %s is set to readonly", ask.getQuestion().getCode());
-		} else {
-			codes.add(code);
-		}
-
-		// grab all child ask attribute codes
-		if (ask.hasChildren()) {
-			for (Ask childAsk : ask.getChildAsks()) {
-				codes.addAll(recursivelyGetAttributeCodes(codes, childAsk));
-			}
-		}
-		return codes;
+		return true;
 	}
 
 	/**
 	 * @param asks
 	 */
-	public Map<String, Ask> buildAskFlatMap(List<Ask> asks) {
+	public static Map<String, Ask> buildAskFlatMap(List<Ask> asks) {
 		return buildAskFlatMap(new HashMap<String, Ask>(), asks);
 	}
 
@@ -453,7 +447,7 @@ public class QwandaUtils {
 	 * @param map
 	 * @param asks
 	 */
-	public Map<String, Ask> buildAskFlatMap(Map<String, Ask> map, List<Ask> asks) {
+	public static Map<String, Ask> buildAskFlatMap(Map<String, Ask> map, List<Ask> asks) {
 
 		if (asks == null)
 			return map;
@@ -474,11 +468,9 @@ public class QwandaUtils {
 	 * @return
 	 */
 	public boolean hasDepsAnswered(BaseEntity target, String[] dependencies) {
-		target.getBaseEntityAttributes().forEach(ea -> log.info(ea.getAttributeCode() + " = " + ea.getValue()));
 		for (String d : dependencies) {
-			if (target.getValue(d).isEmpty()) {
+			if (!target.getValue(d).isPresent())
 				return false;
-			}
 		}
 		return true;
 	}
@@ -486,22 +478,21 @@ public class QwandaUtils {
 	/**
 	 * @param asks
 	 * @param target
-	 * @param defBE
+	 * @param definition
 	 * @param flatMapAsks
 	 * @return
 	 */
-	public Map<String, Ask> updateDependentAsks(BaseEntity target, BaseEntity defBE, Map<String, Ask> flatMapAsks) {
+	public Map<String, Ask> updateDependentAsks(BaseEntity target, Definition definition, Map<String, Ask> flatMapAsks) {
 
-		List<EntityAttribute> dependentAsks = defBE.findPrefixEntityAttributes("DEP");
+		List<EntityAttribute> dependentAsks = definition.findPrefixEntityAttributes(Prefix.DEP);
 
 		for (EntityAttribute dep : dependentAsks) {
-			String attributeCode = StringUtils.removeStart(dep.getAttributeCode(), "DEP_");
+			String attributeCode = StringUtils.removeStart(dep.getAttributeCode(), Prefix.DEP);
 			Ask targetAsk = flatMapAsks.get(attributeCode);
-			if (targetAsk == null) {
+			if (targetAsk == null)
 				continue;
-			}
 
-			String[] dependencies = beUtils.cleanUpAttributeValue(dep.getValueString()).split(",");
+			String[] dependencies = CommonUtils.cleanUpAttributeValue(dep.getValueString()).split(",");
 
 			boolean depsAnswered = hasDepsAnswered(target, dependencies);
 			targetAsk.setDisabled(!depsAnswered);
@@ -518,35 +509,30 @@ public class QwandaUtils {
 	 * @param baseEntity The BaseEntity to check against
 	 * @return Boolean
 	 */
-	public Boolean mandatoryFieldsAreAnswered(Map<String, Ask> map, BaseEntity baseEntity) {
+	public static Boolean mandatoryFieldsAreAnswered(Map<String, Ask> map, BaseEntity baseEntity) {
 
 		// find all the mandatory booleans
 		Boolean answered = true;
 
-		// iterate entity attributes to check which have been answered
-		for (EntityAttribute ea : baseEntity.getBaseEntityAttributes()) {
+		// iterate asks to see if mandatorys are answered
+		for (Ask ask : map.values()) {
 
-			String attributeCode = ea.getAttributeCode();
-			Ask ask = map.get(attributeCode);
-			if (ask == null)
-				continue;
+			String attributeCode = ask.getQuestion().getAttribute().getCode();
 
 			Boolean mandatory = ask.getMandatory();
-			if (mandatory == null)
-				continue;
+			Boolean readonly = ask.getReadonly();
 
-			String value = ea.getAsString();
+			String value = baseEntity.getValueAsString(attributeCode);
 
-			// if any are both blank and mandatory, then task is not complete
-			if (mandatory && StringUtils.isBlank(value)) {
+			// if any are blank, mandatory and non-readonly, then task is not complete
+			if ((mandatory && !readonly) && StringUtils.isBlank(value))
 				answered = false;
-			}
 
-			String resultLine = (mandatory ? "[M]" : "[O]") + " : " + ea.getAttributeCode() + " : " + value;
-			log.info("===> " + resultLine);
+			String resultLine = (mandatory ? "[M]" : "[O]") + " : " + attributeCode + " : " + value;
+			log.debug("===> " + resultLine);
 		}
 
-		log.info("Mandatory fields are " + (answered ? "ALL" : "not") + " complete");
+		log.debug("Mandatory fields are " + (answered ? "ALL" : "not") + " complete");
 
 		return answered;
 	}
@@ -562,16 +548,12 @@ public class QwandaUtils {
 
 		// add current ask attribute code to map
 		map.put(ask.getQuestion().getAttribute().getCode(), ask.getMandatory());
-
 		// ensure child asks is not null
-		if (ask.getChildAsks() == null) {
+		if (ask.getChildAsks() == null)
 			return map;
-		}
-
 		// recursively add child ask attribute codes
-		for (Ask child : ask.getChildAsks()) {
+		for (Ask child : ask.getChildAsks())
 			map = recursivelyFillMandatoryMap(map, child);
-		}
 
 		return map;
 	}
@@ -598,14 +580,11 @@ public class QwandaUtils {
 		}
 
 		// ensure child asks is not null
-		if (ask.hasChildren()) {
+		if (ask.hasChildren())
 			return set;
-		}
-
 		// recursively add child ask attribute codes
-		for (Ask child : ask.getChildAsks()) {
+		for (Ask child : ask.getChildAsks())
 			set = recursivelyFillFlatSet(set, child);
-		}
 
 		return set;
 	}
@@ -621,7 +600,7 @@ public class QwandaUtils {
 		String key = String.format("%s:PROCESS_DATA", processData.getProcessId());
 
 		CacheUtils.putObject(productCode, key, processData);
-		log.infof("ProcessData cached to %s", key);
+		log.tracef("ProcessData cached to %s", key);
 	}
 
 	/**
@@ -635,7 +614,7 @@ public class QwandaUtils {
 		String key = String.format("%s:PROCESS_DATA", processId);
 
 		CacheUtils.removeEntry(productCode, key);
-		log.infof("ProcessData removed from cache: %s", key);
+		log.tracef("ProcessData removed from cache: %s", key);
 	}
 
 	/**
@@ -664,29 +643,29 @@ public class QwandaUtils {
 		BaseEntity target = beUtils.getBaseEntity(targetCode);
 
 		// init entity and force the realm
-		log.info("Creating Process Entity " + processData.getProcessEntityCode() + "...");
-		BaseEntity processEntity = new BaseEntity(processData.getProcessEntityCode(), "QuestionBE");
+		log.debug("Creating Process Entity " + processData.getProcessEntityCode() + "...");
+		BaseEntity processEntity = new BaseEntity(processData.getProcessEntityCode(), target.getName());
 		processEntity.setRealm(userToken.getProductCode());
 
 		List<String> attributeCodes = processData.getAttributeCodes();
-		log.info("Found " + attributeCodes.size() + " active attributes in asks");
+		log.debug("Found " + attributeCodes.size() + " active attributes in asks");
 
 		// add an entityAttribute to process entity for each attribute
 		for (String code : attributeCodes) {
 
 			// check for existing attribute in target
 			EntityAttribute ea = target.findEntityAttribute(code).orElseGet(() -> {
-
 				// otherwise create new attribute
 				Attribute attribute = getAttribute(code);
-				Object value = null;
-				// default toggles to false
-				String className = attribute.getDataType().getClassName();
-				if (className.contains("Boolean") || className.contains("bool"))
-					value = false;
-
-				return new EntityAttribute(processEntity, attribute, 1.0, value);
+				return new EntityAttribute(processEntity, attribute, 1.0, null);
 			});
+
+			Attribute attribute = ea.getAttribute();
+			String className = attribute.getDataType().getClassName();
+			Object value = ea.getValue();
+
+			if (value == null && className.contains("Boolean") || className.contains("bool")) 
+				ea.setValue(false);
 
 			processEntity.addAttribute(ea);
 		}
@@ -701,7 +680,7 @@ public class QwandaUtils {
 			processEntity.addAnswer(answer);
 		});
 
-		log.info("ProcessBE contains " + processEntity.getBaseEntityAttributes().size() + " entity attributes");
+		log.debug("ProcessBE contains " + processEntity.getBaseEntityAttributes().size() + " entity attributes");
 
 		return processEntity;
 	}
@@ -737,17 +716,17 @@ public class QwandaUtils {
 		Map<String, List<Answer>> answersPerTargetCodeMap = answers.stream()
 				.collect(Collectors.groupingBy(Answer::getTargetCode));
 
-		for (Map.Entry<String, List<Answer>> targetCode : answersPerTargetCodeMap.entrySet()) {
+		for (Map.Entry<String, List<Answer>> map : answersPerTargetCodeMap.entrySet()) {
 
 			// fetch target and target DEF
-			BaseEntity target = beUtils.getBaseEntity(targetCode.getKey());
-			BaseEntity defBE = defUtils.getDEF(target);
+			BaseEntity target = beUtils.getBaseEntity(map.getKey());
+			Definition definition = defUtils.getDEF(target);
 
 			// filter Non-valid answers using def
-			List<Answer> group = targetCode.getValue();
+			List<Answer> group = map.getValue();
 			List<Answer> validAnswers = group.stream()
-					.filter(item -> defUtils.answerValidForDEF(defBE, item))
-					.toList();
+					.filter(item -> defUtils.answerValidForDEF(definition, item))
+					.collect(Collectors.toList());
 
 			// update target using valid answers
 			for (Answer answer : validAnswers) {
@@ -788,14 +767,14 @@ public class QwandaUtils {
 	public Ask generateAskGroupUsingBaseEntity(BaseEntity baseEntity) {
 
 		// grab def entity
-		BaseEntity defBE = defUtils.getDEF(baseEntity);
+		Definition definition = defUtils.getDEF(baseEntity);
 
 		String sourceCode = userToken.getUserCode();
 		String targetCode = baseEntity.getCode();
 
 		// create GRP ask
 		Attribute questionAttribute = getAttribute(Attribute.QQQ_QUESTION_GROUP);
-		Question question = new Question(DefUtils.PREF_QUE_BASE_GRP,
+		Question question = new Question(Question.QUE_BASEENTITY_GRP,
 				"Edit " + targetCode + " : " + baseEntity.getName(),
 				questionAttribute);
 		Ask ask = new Ask(question, sourceCode, targetCode);
@@ -806,7 +785,7 @@ public class QwandaUtils {
 		entityMessage.setReplace(true);
 
 		// create a child ask for every valid atribute
-		defBE.getBaseEntityAttributes().stream()
+		definition.getBaseEntityAttributes().stream()
 				.filter(ea -> ea.getAttributeCode().startsWith(Prefix.ATT))
 				.forEach((ea) -> {
 					String attributeCode = StringUtils.removeStart(ea.getAttributeCode(), Prefix.ATT);
@@ -854,8 +833,8 @@ public class QwandaUtils {
 	 *                   original target
 	 * @return Boolean
 	 */
-	public Boolean isDuplicate(List<BaseEntity> definitions, Answer answer, BaseEntity... targets) {
-		for (BaseEntity definition : definitions) {
+	public Boolean isDuplicate(List<Definition> definitions, Answer answer, BaseEntity... targets) {
+		for (Definition definition : definitions) {
 			if (isDuplicate(definition, answer, targets)) {
 				return true;
 			}
@@ -872,13 +851,13 @@ public class QwandaUtils {
 	 *                   original target
 	 * @return Boolean
 	 */
-	public Boolean isDuplicate(BaseEntity definition, Answer answer, BaseEntity... targets) {
+	public Boolean isDuplicate(Definition definition, Answer answer, BaseEntity... targets) {
 
 		// Check if attribute code exists as a UNQ for the DEF
 		List<EntityAttribute> uniques = definition.findPrefixEntityAttributes("UNQ");
 		log.info("Found " + uniques.size() + " UNQ attributes");
 
-		String prefix = definition.getValueAsString("PRI_PREFIX");
+		String prefix = definition.getValueAsString(Attribute.PRI_PREFIX);
 
 		for (EntityAttribute entityAttribute : uniques) {
 			// fetch list of unique code combo
@@ -890,14 +869,14 @@ public class QwandaUtils {
 				continue;
 
 			SearchEntity searchEntity = new SearchEntity("SBE_COUNT_UNIQUE_PAIRS", "Count Unique Pairs")
-					.add(new Filter("PRI_CODE", Operator.LIKE, prefix + "_%"))
+					.add(new Filter(PRI_CODE, Operator.LIKE, prefix + "_%"))
 					.setPageStart(0)
 					.setPageSize(1);
 
 			// ensure we are not counting any of our targets
 			for (BaseEntity target : targets) {
 				log.info("adding not equal " + target.getCode());
-				searchEntity.add(new Filter("PRI_CODE", Operator.NOT_EQUALS, target.getCode()));
+				searchEntity.add(new Filter(PRI_CODE, Operator.NOT_EQUALS, target.getCode()));
 			}
 
 			for (String code : codes) {
@@ -911,7 +890,7 @@ public class QwandaUtils {
 					// get the first value in array of target
 					for (BaseEntity target : targets) {
 
-						log.info("TARGET = " + target.getCode() + ", EMAIL = " + target.getValueAsString("PRI_EMAIL"));
+						log.info("TARGET = " + target.getCode() + ", EMAIL = " + target.getValueAsString(Attribute.PRI_EMAIL));
 
 						if (target.containsEntityAttribute(code)) {
 							value = target.getValueAsString(code);
@@ -929,7 +908,7 @@ public class QwandaUtils {
 
 				// clean it up if it is a code
 				if (value.contains("[") && value.contains("]"))
-					value = beUtils.cleanUpAttributeValue(value);
+					value = CommonUtils.cleanUpAttributeValue(value);
 
 				log.info("Adding unique filter: " + code + " like " + value);
 				searchEntity.add(new Filter(code, Operator.LIKE, "%" + value + "%"));
